Fix scroll on mobile

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ html, body {
     font-family: 'Source Code Pro', monospace;
     color: white;
     font-size: 14px;
-    overflow: hidden;
+    overflow: auto;
 }
 
 header {
